--- a/main.css
+++ b/main.css
@@ -14,12 +14,13 @@ img {
 	display: block;
 	width: 147px;
 	margin: 5% auto 0 auto;
--moz-border-radius:7px;
--webkit-border-radius:7px;
-border-radius:7px;
+	position: relative;
+	-moz-border-radius:7px;
+	-webkit-border-radius:7px;
+	border-radius:7px;
 }
 
-a{
+a {
 	text-decoration: underline;
 	color: inherit;
 }
@@ -29,9 +30,7 @@ h1 {
 	font-weight: normal;
 	font-size: 36px;
 	text-transform: uppercase;
-
 	text-align: center;
-
 	position: absolute;
 	top: 275px;
 	width: 100%;
@@ -49,20 +48,15 @@ p {
 
 .social {
 	display: block;
-
 	width: 35px;
 	height: 35px;
-
 	position: absolute;
-
 	bottom: 30px;
-
 	left: 50%;
 }
 
 #mail {
 	background: url(socials.png) 0 0;
-
 	margin: 0 -105px;
 }
 
@@ -72,7 +66,6 @@ p {
 
 #twitter {
 	background: url(socials.png) -35px 0;
-
 	margin: 0 -45px;
 }
 
@@ -82,7 +75,6 @@ p {
 
 #github {
 	background: url(socials.png) -70px 0;
-
 	margin: 0 7.5px;
 }
 
@@ -92,7 +84,6 @@ p {
 
 #linkedin {
 	background: url(socials.png) -105px 0;
-
 	margin: 0 60px;
 }
 
