--- a/style.css
+++ b/style.css
@@ -8,26 +8,54 @@ ul{
 	margin: 0;
 	padding: 0;
 	height: 100%;
-	width: 37.5%;
-	outline: 1px red solid;
+	width: 30%;
+	border-right: 1px solid #8e8e93;
 	display: block;
 }
+
 li{
-	height: 11.4%;
-	border-bottom: 1px blue solid;
+	height: 11.2%;
 	display: block;
 }
+
 li#first{
 	height: 8%;
 }
-p{
-	padding: 35px 0 0 90px;
-	margin: 0;
+
+hr{
+    border: 0;
+    height: 0;
+    margin:0;
+    padding: 0;
+    width: 95%;
+    border-top: 1px solid rgba(0, 0, 0, 0.1);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+    position: relative;
+    left: 5%;
 }
+
+p{
+	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue";
+	font-size: 16px;
+	color: grey;
+	width: 300px;
+	display: inline-block;
+	position: relative;
+	bottom: 5px;
+	left: 3px;
+
+}
+
+strong{
+	color:black;
+	font-family: "HelveticaNeue-Medium", "Helvetica Neue Medium", "Helvetica Neue";
+	font-weight: normal;
+	font-size: 18px;
+}
+
 img{
 	float: left;
-	padding-top: 15px;
-	padding-left: 5px;
-}
-div{
+	padding-top: 11px;
+	padding-left: 25px;
+	padding-right: 3px;
 }
