--- a/bubblee.css
+++ b/bubblee.css
@@ -1,136 +1,4 @@
-@font-face{
-font-family: 'HNRegular';
-src: url('fonts/helveticaneue-webfont.eot?#iefix') format('embedded-opentype'), 
-     url('fonts/helveticaneue-webfont.woff') format('woff'), 
-     url('fonts/helveticaneue-webfont.ttf')  format('truetype');
-}
-
-@font-face{
-font-family: 'HNLight';
-src: url('fonts/HelveticaNeue-Light.eot?#iefix') format('embedded-opentype'), 
-     url('fonts/HelveticaNeue-Light.woff') format('woff'), 
-     url('fonts/HelveticaNeue-Light.ttf')  format('truetype');
-}
-
-html, body{
-	margin: 0;
-	padding: 0;
-	height: 100%;
-	font-family: "HNLight";
-	font-size: 1em;
-	font-weight: normal;
-  	text-rendering: optimizeLegibility;
-  	-webkit-font-smoothing: subpixel-antialiased;
-  	-moz-font-smoothing: subpixel-antialiased;
-  	font-smoothing: subpixel-antialiased;
-  	overflow: hidden;
-}
-
-/* !LEFT SECTION! */
-
-/* On définit les propriétés du menu des Messages*/
-ul{
-	margin: 0;
-	padding: 0;
-	height: 100%;
-	width: 28%;
-	border-right: 1px solid #8e8e93;
-	float: left;
-	display: block;
-	list-style-type: none;
-}
-
-/* On définit les propriétés de chaque Message */
-li{
-	margin: 0;
-	padding: 0;
-	height: 11.3%;
-	display: block;
-}
-
-/* Corresponds au titre du menu */
-li.first{
-	height:7%;
-	width:100%;
-	background-color: #f8f8f8;
-	text-align: center;
-}
-
-/* Picto e-mail */
-img#writemail{
-	float: right;
-	display: inline;
-	position: absolute;
-	left: 26%;
-	top: 1.7%;
-}
-
-span{
-	margin:0;
-	padding:0;
-	position: relative;
-	top:30%;
-}
-
-span.center{
-	right: 7%;
-}
-
-span.gauche{
-	float: left;
-	left: 2%;
-	color: #0d7aff;
-	font-size: 1.1em;
-}
-
-hr{
-    border: 0;
-    height: 0;
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    border-top: 1px solid rgba(0, 0, 0, 0.1);
-    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
-}
-
-hr#menu{
-	border-top: 1px solid rgba(0, 0, 0, 0.1);
-    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
-    width:95%;
-    position: relative;
-    left: 5%;
-}
-
-p.message{
-	color: #8e8e93;
-	display: inline-block;
-	width: 310px;
-	position: relative;
-	left: 7%;
-	top: 13%;
-}
-
-strong{
-	color:black;
-	font-family: "HNRegular";
-	font-weight: normal;
-	font-size: 1.08em;
-}
-
-strong.titre{
-	font-size: 1.2em;
-}
-
-img.imgmenu{
-	float: left;
-	position: relative;
-	top: 13%;
-	left: 5%;
-}
-
-/* !RIGHT SECTION! */
-
-/* La section titre principal en haut à droite */
+/* Le menu principal de droite */
 div.menucentre{
   height: 7%;
   width: 72%;
@@ -139,10 +7,6 @@ div.menucentre{
   background-color: #f8f8f8;
   border-bottom: 1px solid #e6e6e6;
   border-left: 1px solid #8e8e93;
-}
-
-div.menucentre p{
-	left: 5%;
 }
 
 div p{
